# live-player

./: Cargo.toml  FFMPEG_SETUP.md  FINAL_SUMMARY.md  Makefile  PROJECT_STATUS.md  README.md  TESTING_GUIDE.md  client.toml  server.toml
game-stream-client/: Cargo.toml
game-stream-client/src/: capture.rs  client.rs  encoder.rs  main.rs  pusher.rs
game-stream-common/: Cargo.toml
game-stream-common/src/: codec.rs  config.rs  error.rs  lib.rs  protocol.rs  stream.rs
game-stream-server/: Cargo.toml
game-stream-server/src/: auth.rs  hls.rs  http.rs  main.rs  rtmp.rs  server.rs  webrtc.rs
scripts/: benchmark.sh  enable-ffmpeg.sh  quick-test.sh  start-dev.sh  test-ffmpeg-push.sh  test-live-streaming.sh  test-rtmp.sh
web/: index.html  test.html  webrtc-client.js
