[package]
name = "game-stream-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "game-stream-client"
path = "src/main.rs"

[dependencies]
game-stream-common = { path = "../game-stream-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
bytes = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
config = { workspace = true }

# Screen capture
xcap = "0.0.12"

# Audio capture
cpal = "0.15"

# Video/Audio encoding (暂时注释掉，避免编译问题)
# ffmpeg-next = "7.0"

# RTMP client
rml_rtmp = "0.8"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Configuration
toml = "0.8"

# Date/time support
chrono = { version = "0.4", features = ["serde"] }
