[package]
name = "game-stream-server"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "game-stream-server"
path = "src/main.rs"

[dependencies]
game-stream-common = { path = "../game-stream-common" }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
bytes = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }
config = { workspace = true }

# RTMP server
rml_rtmp = "0.8"

# WebRTC support
webrtc = "0.10"

# HTTP server for HLS/DASH and WebRTC signaling
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "fs"] }

# WebSocket support
tokio-tungstenite = "0.21"

# HLS/DASH support
m3u8-rs = "6.0"

# Async utilities
futures = "0.3"
async-trait = "0.1"

# Configuration
toml = "0.8"

# Random number generation
rand = "0.8"

# Date/time support
chrono = { version = "0.4", features = ["serde"] }

# Media processing (暂时注释掉，避免编译问题)
# ffmpeg-next = "7.0"
